--- a/css/style.css
+++ b/css/style.css
@@ -4,9 +4,19 @@ body {
 	background-image: url(../img/wood-background-2-edited.jpg)
 }
 
+h2,
+p {
+	font-family: 'Montserrat', sans-serif;
+	font-weight: 100;
+	font-size: 0.8em;
+	letter-spacing: 1px;
+	margin: 30px 30px 10px;
+	color: #d3d3d3;
+}
+
 .wrapper {
 	background-color: white;
-	margin: 100px;
+	margin: 0 100px;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
@@ -22,36 +32,64 @@ ul {
 	list-style-type: none;
 }
 
-.nav li {
+.nav li,
+.moffett-info li {
 	display: flex;
 	flex-direction: column;
 }
 
+.nav img,
+.moffett-info img {
+	padding: 0.8em;
+	margin: auto;
+}
+
 .nav img {
 	border: solid 1px gray;
-	padding: 0.8em;
 }
 
 .nav p {
 	z-index: 100;
 	position: relative;
-	top: -75px;
-	/* End */
-	font-family: sans-serif;
+	top: -100px;
 	font-size: 1.2em;
 	color: #bdbdbd;
 	padding-top: 0.8em;
 	padding-bottom: 0.8em;
 	width: 70%;
-	border: solid 1px #d3d3d3;
+	border: solid 1px #bdbdbd;
 	text-align: center;
 	margin: auto;
 }
 
+
+hr {
+	display: block;
+    height: 1px;
+    border: 0;
+    border-top: 1px solid #d3d3d3;
+    padding: 0; 
+    margin: auto;
+    max-width: 90%;
+}
+
+
+
 /********** BASE LAYOUT STYLES **********/
 
+/*.contact p {
+	display: inline-flex;
+	flex-direction: row;
+	justify-content: flex-start;
+}*/
 
+.contact span {
+	display: flex;
+}
 
+.contact img {
+	margin-left: 45px;
+}
 
 
 /********** MEDIA QUERIES **********/
