--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,8 @@
 body {
 	background-image: url(../img/wood-background-2-edited.jpg);
 	margin-top: 0;
+	display: flex;
+	flex-direction: column;
 }
 
 h2,
@@ -19,9 +21,11 @@ p {
 	background-color: white;
 	margin: 0 50px;
 	display: flex;
+	margin: auto;
 	flex-direction: column;
 	justify-content: center;
-	align-items: center
+	align-items: center;
+	width: 337px;
 }
 
 .banner {
@@ -40,16 +44,16 @@ ul {
 }
 
 .nav li,
-.moffett-info li {
+.more-info li {
 	display: flex;
 	flex-direction: column;
 }
 
 .nav img,
-.moffett-info img {
+.more-info img {
 	padding: 0.8em;
 	margin: auto;
-	width: 80%;
+	max-width: 80%;
 }
 
 .nav img {
@@ -100,6 +104,9 @@ hr {
 	margin-left: 45px;
 }
 
+.moffett-info p {
+	text-align: center;
+}
 
 /********** MEDIA QUERIES **********/
 
