--- a/css/style.css
+++ b/css/style.css
@@ -113,6 +113,7 @@ hr {
 
 .contact img {
 	margin-left: 45px;
+	padding-bottom: 0;
 }
 
 .moffett-info,
@@ -121,7 +122,7 @@ hr {
 }
 
 .moffett-info {
-	padding: 20px 0;
+	padding-bottom: 20px;
 	line-height: 150%;
 }
 
@@ -138,8 +139,43 @@ hr {
 
 @media (min-width: 460px){
 	
-/*	* {
-		background-color: red;
-	}*/
+	.wrapper {
+		margin: 100px auto;
+		width: 450px;
+	}
+
+	.banner {
+		margin-top: 5em;
+		margin-bottom: 2.5em;
+	}
+
+	.nav img,
+	.more-info img {
+		padding: 0.8em;
+		margin: auto;
+		max-width: 90%;
+	}
+
+	.nav p {
+		top: -95px;
+	}
+
+	hr {
+		max-width: 100%
+	}
+
+	.contact {
+		display: flex;
+		flex-direction: column;
+	}
+
+	.contact span {
+		display: inline-flex;
+	}
+
+	.contact img {
+		margin: 0 auto;
+		padding-bottom: 0;
+	}
 
 }
