--- a/css/style.css
+++ b/css/style.css
@@ -141,7 +141,7 @@ hr {
 	
 	.wrapper {
 		margin: 100px auto;
-		width: 450px;
+		width: 400px;
 	}
 
 	.banner {
@@ -176,6 +176,51 @@ hr {
 	.contact img {
 		margin: 0 auto;
 		padding-bottom: 0;
+	}
+
+}
+
+@media (min-width: 756px){
+	
+	.wrapper {
+		margin: 100px auto;
+		width: 1100px;
+	}
+
+	.nav {
+		width: 70%;
+	}
+
+	.nav li,
+	.more-info li {
+		display: inline-flex;
+		flex-direction: column;
+	}
+
+	.nav li {
+		margin: -10px 7px;
+	}
+
+	hr {
+		max-width: 75%
+	}
+
+	.contact {
+		display: inline-flex;
+		flex-direction: row;
+		justify-content: center;
+		width: 100%;
+		margin: 0 auto;
+	}
+
+	.contact p {
+		margin-bottom: 0;
+		margin-right: 90px;
+	}
+
+	.contact img {
+		margin: 30px 30px 10px 150px;
+		padding: 0;
 	}
 
 }
