--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,10 @@ p {
 	font-weight: 100;
 	letter-spacing: 2px;
 	margin: 30px 30px 10px;
+	color: #3B3B3B;
+}
+
+.footer p {
 	color: #d3d3d3;
 }
 
@@ -21,7 +25,7 @@ h2 {
 	font-size: 1em;
 }
 
-p{
+p {
 	font-size: 0.7em;
 }
 
@@ -47,7 +51,7 @@ p{
 }
 
 ul {
-	padding: 0;
+	padding: 0 20px;
 	list-style-type: none;
 }
 
@@ -124,6 +128,16 @@ hr {
 .moffett-info {
 	padding-bottom: 20px;
 	line-height: 150%;
+	font-size: 0.9em;
+}
+
+.moffett-info h2 {
+	padding-bottom: 10px;
+}
+
+.text-image img {
+	padding-bottom: 0;
+	margin-bottom: -10px;
 }
 
 .footer {
@@ -178,17 +192,26 @@ hr {
 		padding-bottom: 0;
 	}
 
+	.moffett-info h2 {
+		padding-bottom: 10px;
+	}
+
+	.text-image img {
+		padding-bottom: 0;
+		margin-bottom: -10px;
+	}
+
 }
 
 @media (min-width: 756px){
 	
 	.wrapper {
 		margin: 100px auto;
-		width: 1100px;
+		width: 1000px;
 	}
 
 	.nav {
-		width: 70%;
+		width: 80%;
 	}
 
 	.nav li,
@@ -221,6 +244,20 @@ hr {
 	.contact img {
 		margin: 30px 30px 10px 150px;
 		padding: 0;
+	}
+
+
+	.moffett-info {
+		margin: 20px 50px;
+	}
+	
+	.moffett-info h2 {
+		padding-bottom: 10px;
+	}
+
+	.text-image img {
+		padding-bottom: 0;
+		margin-bottom: -10px;
 	}
 
 }
